<?xml version="1.0"?>
<package format="3">
  <name>manda_can_control</name>
  <version>1.0.0</version>
  <description>The manda_can_control package</description>

  <maintainer email="jianhouxifeng1222@gmail.com">fengql</maintainer>

  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>
  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
